Discontinued due to time constraint, sorry!

--- a/cplusplus.html
+++ b/cplusplus.html
@@ -102,6 +102,7 @@
 <h1 align="center"> LI C/C++ </h1>
 <p align="center"> Template and style original: <keyword>Rhys Barrett</keyword>. </p>
 <hr/>
+<h3> <span style="color: red;"> Discontinued due to time constraint, sorry! </span></h3>
 Table of Contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; var subtopics=document.getElementsByClassName('subtopic'); for (var i = 0; i < subtopics.length; i++) { subtopics[i].style.display=(expanded ? '' : 'none'); } this.innerHTML=(expanded ? 'collapse' : 'expand');">expand</a>)
 <ol>
     <li><a href="#intro"> Introduction to C </a> <ol class="subtopic" style="display: none;">
@@ -127,7 +128,6 @@ Table of Contents (<a href="#" onclick="var expanded=this.innerHTML==='expand'; 
 </ol>
 
 <hr/>
-
 <h2 id="intro"> 1 &ndash; Introduction to C </h2>
 <p> Comparing C, C++ and Java. <br/> They all have core imperative language that includes assignment
 while, functions and recursion. </p>
