Project closed! Thanks everybody

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     if (seats[i].innerHTML === ' -') modules[i].style.display = 'none';
                 }
                 for (i = 0; i < lefts.length; i++) {
-                    if (lefts[i].innerHTML === "<strong> DONE! </strong>") modules[i+1].style.display = 'none';
+                    //if (lefts[i].innerHTML === "<strong> DONE! </strong>") modules[i+1].style.display = 'none';
                 }
             }
         }
@@ -174,7 +174,7 @@
                         modules[j].style.display = 'none';
                 }
                 for (i = 0; i < lefts.length; i++) {
-                    if (lefts[i].innerHTML === "<strong> DONE! </strong>") modules[i+1].style.display = 'none';
+                    //if (lefts[i].innerHTML === "<strong> DONE! </strong>") modules[i+1].style.display = 'none';
                 }
             } else {
                 for (var i = 1; i < seats.length; i++) {
